--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,3 @@
-<h1>ようこそ Bookersへ!</h1>
-  <p>
-  Bookersでは、さまざまな書籍に関するあなたの意見や<br>
-  <br>
-  印象を共有し交換する事ができます<br>
-  </p>
+<h1>ようこそ <strong>Bookers</strong> へ!</h1>
+  <p>Bookersでは、さまざまな書籍に関するあなたの意見や</p>
+  <p>印象を共有し交換する事ができます</p>
